# exoplanet-detection-using-light-curves

./: FINAL_AUDIT_REPORT.md  PARTS_1_2_DESIGN_PLAN.md  PARTS_3_5_DESIGN_PLAN.md  PARTS_7_8_UNCERTAINTY_VALIDATION_DESIGN_PLAN.md  PARTS_9_10_BATCH_SUBMISSION_DESIGN_PLAN.md  PART_6_AI_CLASSIFIER_DESIGN_PLAN.md  README.md  REPORT_DRAFT_PARTS_1_2.md  REPORT_DRAFT_PARTS_1_5.md  REPORT_DRAFT_PARTS_1_6.md  REPORT_DRAFT_PARTS_1_8.md  TEST_STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
outputs_part6_ai/: part6_ai_classifier.joblib  part6_ai_classifier_MODEL_CARD.md  part6_ai_classifier_feature_importance.csv  part6_ai_classifier_metrics.json  part6_demo_predictions.csv  part6_synthetic_labeled_feature_catalog.csv
outputs_parts_1_to_5/: parts_1_to_5_synthetic_catalog.csv
outputs_parts_7_8/: parts_7_8_injection_recovery_catalog.csv  parts_7_8_injection_recovery_summary.json  parts_7_8_validation_report.json  parts_7_8_validation_report.md
outputs_parts_9_10/: batch_final_summary.json  batch_raw_candidate_catalog.csv  batch_run_manifest.json  batch_target_summary.csv
outputs_parts_9_10/cache/: tic_910001_s1_00000_catalog.csv  tic_910001_s1_00000_summary.json  tic_920001_s1_00001_catalog.csv  tic_920001_s1_00001_summary.json  (+2 more)
scripts/: run_parts_1_to_8_synthetic_single.py  run_parts_7_8_synthetic_validation.py  run_parts_9_10_fits_directory.py  run_parts_9_10_synthetic_batch.py  run_single_fits.py  run_synthetic_demo.py
tests/: test_batch_final_outputs.py  test_cli.py  test_preprocess.py  test_uncertainty_validation.py
(+21 files in other folders)
